--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@datorama/akita": "^1.24.3",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "json-server": "^0.14.2",
@@ -35,9 +36,12 @@
     "@angular/cli": "~7.2.1",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
+    "@datorama/akita-ng-router-store": "^1.0.0",
+    "@datorama/akita-ngdevtools": "^1.0.2",
     "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "akita-schematics": "^2.0.0",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
